--- a/public/partials/phone-detail.html
+++ b/public/partials/phone-detail.html
@@ -1,4 +1,6 @@
-<img ng-src="{{mainImageUrl}}"  class="phone" />
+<div class="phone-images">
+    <img ng-src="{{img}}" class="phone" ng-repeat="img in phone.images" ng-class="{active:mainImageUrl==img}">
+</div>
 
 <h1>{{phone.name}}</h1>
 
@@ -6,10 +8,9 @@
 
 <ul class="phone-thumbs">
     <li ng-repeat="img in phone.images">
-        <img ng-src="{{img}}" ng-click="setImage(img)">
+        <img ng-src="{{img}}" ng-mouseenter="setImage(img)">
     </li>
 </ul>
-
 
 
 <input type="text" ng-model="name" ng-blur="hello()"/>
